_build/_log
### Starting build.
# Target: render.ml.depends, tags: { package(camlimages.core), package(camlimages.png), package(lablgl), package(ounit2), package(yojson), extension:ml, file:render.ml, ocaml, ocamldep, quiet, traverse }
/Users/jd/.opam/cs3110-2021sp/bin/ocamldep.opt -modules render.ml > render.ml.depends
# Target: texturemap.mli.depends, tags: { package(camlimages.core), package(camlimages.png), package(lablgl), package(ounit2), package(yojson), extension:mli, file:texturemap.mli, ocaml, ocamldep, quiet, traverse }
/Users/jd/.opam/cs3110-2021sp/bin/ocamldep.opt -modules texturemap.mli > texturemap.mli.depends
# Target: texturemap.cmi, tags: { package(camlimages.core), package(camlimages.png), package(lablgl), package(ounit2), package(yojson), byte, compile, extension:mli, file:texturemap.mli, interf, ocaml, quiet, traverse }
/Users/jd/.opam/cs3110-2021sp/bin/ocamlc.opt -c -o texturemap.cmi texturemap.mli
# Target: render.cmo, tags: { package(camlimages.core), package(camlimages.png), package(lablgl), package(ounit2), package(yojson), byte, compile, extension:cmo, extension:ml, file:render.cmo, file:render.ml, implem, ocaml, quiet, traverse }
/Users/jd/.opam/cs3110-2021sp/bin/ocamlc.opt -c -o render.cmo render.ml
+ /Users/jd/.opam/cs3110-2021sp/bin/ocamlc.opt -c -o render.cmo render.ml
File "render.ml", line 10, characters 2-21:
10 |   GlMat.load_identity ();
       ^^^^^^^^^^^^^^^^^^^
Error: Unbound module GlMat
Hint: Did you mean Float?
Command exited with code 2.
# Compilation unsuccessful.
